# datamatrix-benchmark

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
conan/all/: conandata.yml  conanfile.py
doc/: create_plots.py  detection_results.md  performance.md
include/sfdm/: code_position.hpp  decode_result.hpp  detection_result.hpp  icode_reader.hpp  image_view.hpp  libdmtx_code_reader.hpp  libdmtx_fast_code_reader.hpp  libdmtx_zxing_combined_code_reader.hpp  result_stream.hpp  sfdm.hpp  sfdm_point.hpp  zxing_code_reader.hpp
src/: detection_result.cpp  libdmtx_code_reader.cpp  libdmtx_fast_code_reader.cpp  libdmtx_zxing_combined_code_reader.cpp  zxing_code_reader.cpp
test/: CMakeLists.txt  benchmark_decoder.cpp  create_plots.py  main.cpp  test_decoder.cpp  test_utils.cpp  test_utils.hpp
